Fix non-existent define `CPU(JSVALUE64)` https://bugs.webkit.org/show_bug.cgi?id=190479

Reviewed by Yusuke Suzuki.

* jit/CCallHelpers.h:
(JSC::CCallHelpers::setupArgumentsImpl):
Correct CPU(JSVALUE64) to USE(JSVALUE64).


Canonical link: https://commits.webkit.org/205425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237051 268f45cc-cd09-0410-ab3c-d52691b4dbfc